force-app/main/default/objects/NCMT_Other_Cost__c/NCMT_Other_Cost__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <label>NCMT Other Cost</label>
    <nameField>
        <displayFormat>OC-{00000000}</displayFormat>
        <label>Other Cost Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Other Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>