force-app/main/default/objects/NCMT_Other_Cost__c/fields/Basis_of_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Basis_of_Estimate__c</fullName>
    <description>Basis of Estimate</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>