force-app/main/default/objects/NCMT_Other_Cost__c/fields/Cost_Based_on__c.field-meta.xml
<CustomField>
    <fullName>Cost_Based_on__c</fullName>
    <label>Cost Based on</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cost_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross Area</fullName>
                <default>true</default>
                <label>Gross Area</label>
            </value>
            <value>
                <fullName>Useable Area</fullName>
            </value>
            <value>
                <fullName>Site Area</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>