force-app/main/default/objects/NCMT_Other_Cost__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <description>Cost Type</description>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Costs</fullName>
                <default>true</default>
                <label>Direct Costs</label>
            </value>
            <value>
                <fullName>Project Costs</fullName>
            </value>
            <value>
                <fullName>Core/Shell</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Site/ Infrastructure</fullName>
            </value>
            <value>
                <fullName>Site Acquisition Cost</fullName>
            </value>
            <value>
                <fullName>Proposed Option</fullName>
            </value>
            <value>
                <fullName>Deduct from Base option</fullName>
            </value>
            <value>
                <fullName>Capital Renewal</fullName>
            </value>
            <value>
                <fullName>Moving Costs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>