force-app/main/default/objects/NCMT_Other_Cost__c/fields/Frequency_Years__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Years__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Frequency (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>