force-app/main/default/objects/NCMT_Other_Cost__c/fields/Gross_Area_SF__c.field-meta.xml
<CustomField>
    <fullName>Gross_Area_SF__c</fullName>
    <formula>IF( TEXT(Cost_Based_on__c)==&apos;Gross Area&apos; , Gross_Area__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>