force-app/main/default/objects/NCMT_Other_Cost__c/fields/Housing_Plan_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Cost_Type__c</fullName>
    <formula>Text(NCMT_Housing_Plan_Option_Selection__r.NCMT_Housing_Plan_Option__r.NCMT_Housing_Plan_Option_Template__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Plan Cost Type</label>
    <type>Text</type>
</CustomField>