force-app/main/default/objects/NCMT_Other_Cost__c/fields/Housing_Plan_Option_Choice__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Option_Choice__c</fullName>
    <formula>NCMT_Housing_Plan_Option_Selection__r.Choice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Plan Option Choice</label>
    <type>Text</type>
</CustomField>