force-app/main/default/objects/NCMT_Other_Cost__c/fields/Housing_Plan_Option_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Option_Square_Footage__c</fullName>
    <label>Housing Plan Option Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>