force-app/main/default/objects/NCMT_Other_Cost__c/fields/NCMT_Housing_Plan_Option_Selection__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Housing_Plan_Option_Selection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT Housing Plan - Option Selection</label>
    <referenceTo>NCMT_Housing_Plan_Option_Selection__c</referenceTo>
    <relationshipLabel>NCMT Other Costs</relationshipLabel>
    <relationshipName>NCMT_Other_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>