force-app/main/default/objects/NCMT_Other_Cost__c/fields/NCMT_Other_Cost_Original_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Other_Cost_Original_Record_Id__c</fullName>
    <label>NCMT Other Cost Original Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>