force-app/main/default/objects/NCMT_Other_Cost__c/fields/NCMT_Project__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project__c</fullName>
    <label>NCMT Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipName>Other_Costs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>