force-app/main/default/objects/NCMT_Other_Cost__c/fields/Other_Area__c.field-meta.xml
<CustomField>
    <fullName>Other_Area__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Other Area</description>
    <inlineHelpText>If Cost Based is Other, then enter value for quantity</inlineHelpText>
    <label>Quantity</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>