force-app/main/default/objects/NCMT_Other_Cost__c/fields/Other_Cost_Summary__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost_Summary__c</fullName>
    <label>Other Cost Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>