force-app/main/default/objects/NCMT_Other_Cost__c/fields/Project_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Record_Type_Id__c</fullName>
    <formula>NCMT_Project__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Record Type Id</label>
    <type>Text</type>
</CustomField>