force-app/main/default/objects/NCMT_Other_Cost__c/fields/Related_Housing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Related_Housing_Plan__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;NCMT_Housing_Plan_Option_Selection__r.NCMT_Housing_Plan__c, NCMT_Housing_Plan_Option_Selection__r.NCMT_Housing_Plan__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Housing Plan</label>
    <type>Text</type>
</CustomField>