force-app/main/default/objects/NCMT_Other_Cost__c/fields/Site_Area__c.field-meta.xml
<CustomField>
    <fullName>Site_Area__c</fullName>
    <formula>IF(TEXT( Cost_Based_on__c )==&apos;Site Area&apos;, Gross_Area__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>