force-app/main/default/objects/NCMT_Other_Cost__c/fields/Space_Type__c.field-meta.xml
<CustomField>
    <fullName>Space_Type__c</fullName>
    <formula>Text(NCMT_Housing_Plan_Cost_Parameter__r.Space_Type__c)</formula>
    <label>Space Type</label>
    <type>Text</type>
</CustomField>