force-app/main/default/objects/NCMT_Other_Cost__c/fields/Total1__c.field-meta.xml
<CustomField>
    <fullName>Total1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>