force-app/main/default/objects/NCMT_Other_Cost__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>if ( (text(Cost_Type__c) == &apos;Site Acquisition Cost&apos; &amp;&amp; text( Cost_Based_on__c )== &apos;Other&apos;), 
Unit_Rate__c
,Gross_Area__c  * Unit_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>