force-app/main/default/objects/NCMT_Other_Cost__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <summarizedField>NCMT_Other_Direct_Cost__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>NCMT_Other_Direct_Cost__c.NCMT_Other_Cost__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>