force-app/main/default/objects/NCMT_Other_Cost__c/fields/Total_Other_Core_Shell_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Core_Shell_Cost__c</fullName>
    <label>Total Other Core/Shell Cost</label>
    <summarizedField>NCMT_Other_Direct_Cost__c.Total_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>NCMT_Other_Direct_Cost__c.Cost_Based_On__c</field>
        <operation>equals</operation>
        <value>Core/Shell</value>
    </summaryFilterItems>
    <summaryForeignKey>NCMT_Other_Direct_Cost__c.NCMT_Other_Cost__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>