force-app/main/default/objects/NCMT_Other_Cost__c/fields/Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Unit_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Unit Rate</description>
    <label>Unit Rate</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>