force-app/main/default/objects/NCMT_Other_Cost__c/recordTypes/LPOE_Other_Cost.recordType-meta.xml
<RecordType>
    <fullName>LPOE_Other_Cost</fullName>
    <active>true</active>
    <description>LPOE Other Cost</description>
    <label>LPOE - Other Cost</label>
</RecordType>