force-app/main/default/objects/NCMT_Other_Cost__c/recordTypes/Other_Capital_Renewal_Cost.recordType-meta.xml
<RecordType>
    <fullName>Other_Capital_Renewal_Cost</fullName>
    <active>true</active>
    <description>For TCO - User Option</description>
    <label>Other Capital Renewal Cost</label>
</RecordType>