force-app/main/default/objects/NCMT_Other_Cost__c/recordTypes/Other_Facilities_Other_Cost.recordType-meta.xml
<RecordType>
    <fullName>Other_Facilities_Other_Cost</fullName>
    <active>true</active>
    <description>Other Facilities - Other Cost</description>
    <label>Other Facilities - Other Cost</label>
</RecordType>