force-app/main/default/objects/NCMT_Other_Cost__c/recordTypes/Other_Facilities_Other_Direct_Cost.recordType-meta.xml
<RecordType>
    <fullName>Other_Facilities_Other_Direct_Cost</fullName>
    <active>true</active>
    <description>Other Facilities - Other Direct Cost</description>
    <label>Other Facilities - Other Direct Cost</label>
</RecordType>