force-app/main/default/objects/NCMT_Other_Cost__c/recordTypes/Other_Housing_Plan_Cost.recordType-meta.xml
<RecordType>
    <fullName>Other_Housing_Plan_Cost</fullName>
    <active>true</active>
    <label>Other Housing Plan Cost</label>
</RecordType>