force-app/main/default/objects/NCMT_Other_Cost__c/validationRules/Check_Cost_Based_On_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Cost_Based_On_Other</fullName>
    <active>true</active>
    <description>Check if Cost Based On is Other, then Use Other Area.</description>
    <errorConditionFormula>text(Cost_Type__c) != &apos;Capital Renewal&apos; &amp;&amp; text(Cost_Based_on__c) = &apos;Other&apos; &amp;&amp;  Other_Area__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Other_Area__c</errorDisplayField>
    <errorMessage>For Cost Based On &apos;Other&apos;, Enter Other Area value</errorMessage>
</ValidationRule>