force-app/main/default/objects/NCMT_Other_Cost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Cost_Type__c</columns>
    <columns>Basis_of_Estimate__c</columns>
    <columns>Cost_Based_on__c</columns>
    <columns>Cost_Description__c</columns>
    <columns>NCMT_Project__c</columns>
    <columns>Total1__c</columns>
    <columns>Total__c</columns>
    <columns>Unit_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>